@@ -180,6 +180,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/buffer.hpp"
 #include "libtorrent/socket.hpp"
 #include "libtorrent/error_code.hpp"
+#include "libtorrent/policy.hpp" // for policy::peer
 
 namespace libtorrent
 {
@@ -196,6 +197,7 @@ namespace libtorrent
 	class alert;
 	struct torrent_plugin;
 	class torrent;
+	struct torrent_peer;
 
 	// this is the base class for a session plugin. One primary feature
 	// is that it is notified of all torrents that are added to the session,
@@ -226,6 +228,15 @@ namespace libtorrent
 
 		// called once per second
 		virtual void on_tick() {}
+
+		// called when choosing peers to optimisticly unchoke
+		// peer's will be unchoked in the order they appear in the given
+		// vector which is initiallity sorted by when they were last
+		// optimistically unchoked.
+		// if the plugin returns true then the ordering provided will be
+		// used and no other plugin will be allowed to change it.
+		virtual bool on_optimistic_unchoke(std::vector<policy::peer*>& /* peers */)
+		{ return false; }
 
 		// called when saving settings state
 		virtual void save_state(entry&) const {}
@@ -380,6 +391,9 @@ namespace libtorrent
 		virtual bool on_cancel(peer_request const&) { return false; }
 		virtual bool on_reject(peer_request const&) { return false; }
 		virtual bool on_suggest(int /*index*/) { return false; }
+
+		// called after a choke message has been sent to the peer
+		virtual void sent_unchoke() {}
 
 		// called when libtorrent think this peer should be disconnected.
 		// if the plugin returns false, the peer will not be disconnected.
